pkg/manifestclienttest/testdata/must-gather-01/cluster-scoped-resources/config.openshift.io/imagecontentpolicies.yaml
---
apiVersion: config.openshift.io/v1
items: []
kind: ImageContentPolicyList
metadata:
  continue: ""
  resourceVersion: "47572"
