pkg/manifestclienttest/testdata/must-gather-01/cluster-scoped-resources/config.openshift.io/ingresses.yaml
---
apiVersion: config.openshift.io/v1
items:
- apiVersion: config.openshift.io/v1
  kind: Ingress
  metadata:
    creationTimestamp: "2023-12-06T09:17:38Z"
    generation: 1
    managedFields:
    - apiVersion: config.openshift.io/v1
      fieldsType: FieldsV1
      fieldsV1:
        f:status:
          f:componentRoutes:
            k:{"name":"oauth-openshift","namespace":"openshift-authentication"}:
              .: {}
              f:conditions:
                k:{"type":"Degraded"}:
                  .: {}
                  f:lastTransitionTime: {}
                  f:message: {}
                  f:reason: {}
                  f:status: {}
                  f:type: {}
                k:{"type":"Progressing"}:
                  .: {}
                  f:lastTransitionTime: {}
                  f:message: {}
                  f:reason: {}
                  f:status: {}
                  f:type: {}
              f:consumingUsers: {}
              f:currentHostnames: {}
              f:defaultHostname: {}
              f:name: {}
              f:namespace: {}
              f:relatedObjects: {}
      manager: AuthenticationCustomRouteController
      operation: Apply
      subresource: status
      time: "2023-12-06T09:37:15Z"
    - apiVersion: config.openshift.io/v1
      fieldsType: FieldsV1
      fieldsV1:
        f:spec:
          .: {}
          f:domain: {}
          f:loadBalancer:
            .: {}
            f:platform:
              .: {}
              f:aws:
                .: {}
                f:type: {}
              f:type: {}
      manager: cluster-bootstrap
      operation: Update
      time: "2023-12-06T09:17:38Z"
    - apiVersion: config.openshift.io/v1
      fieldsType: FieldsV1
      fieldsV1:
        f:status:
          .: {}
          f:defaultPlacement: {}
      manager: cluster-bootstrap
      operation: Update
      subresource: status
      time: "2023-12-06T09:17:38Z"
    name: cluster
    resourceVersion: "29018"
    uid: 6c52ff5c-70fd-4727-8d8a-681f06018c0e
  spec:
    domain: apps.ci-op-2j285qtr-234c7.origin-ci-int-aws.dev.rhcloud.com
    loadBalancer:
      platform:
        aws:
          type: Classic
        type: AWS
  status:
    componentRoutes:
    - conditions:
      - lastTransitionTime: "2023-12-06T09:37:15Z"
        message: All is well
        reason: AsExpected
        status: "False"
        type: Progressing
      - lastTransitionTime: "2023-12-06T09:34:53Z"
        message: All is well
        reason: AsExpected
        status: "False"
        type: Degraded
      consumingUsers:
      - system:serviceaccount:oauth-openshift:authentication-operator
      currentHostnames:
      - oauth-openshift.apps.ci-op-2j285qtr-234c7.origin-ci-int-aws.dev.rhcloud.com
      defaultHostname: oauth-openshift.apps.ci-op-2j285qtr-234c7.origin-ci-int-aws.dev.rhcloud.com
      name: oauth-openshift
      namespace: openshift-authentication
      relatedObjects:
      - group: route.openshift.io
        name: oauth-openshift
        namespace: openshift-authentication
        resource: routes
    defaultPlacement: Workers
kind: IngressList
metadata:
  continue: ""
  resourceVersion: "47578"
