pkg/manifestclienttest/testdata/must-gather-01/cluster-scoped-resources/config.openshift.io/networks.yaml
---
apiVersion: config.openshift.io/v1
items:
- apiVersion: config.openshift.io/v1
  kind: Network
  metadata:
    creationTimestamp: "2023-12-06T09:17:39Z"
    generation: 2
    managedFields:
    - apiVersion: config.openshift.io/v1
      fieldsType: FieldsV1
      fieldsV1:
        f:spec:
          f:clusterNetwork: {}
          f:externalIP:
            f:policy: {}
          f:networkType: {}
          f:serviceNetwork: {}
        f:status:
          f:clusterNetwork: {}
          f:clusterNetworkMTU: {}
          f:networkType: {}
          f:serviceNetwork: {}
      manager: cluster-network-operator/operconfig
      operation: Apply
      time: "2023-12-06T09:20:18Z"
    - apiVersion: config.openshift.io/v1
      fieldsType: FieldsV1
      fieldsV1:
        f:spec:
          .: {}
          f:clusterNetwork: {}
          f:externalIP:
            .: {}
            f:policy: {}
          f:networkType: {}
          f:serviceNetwork: {}
        f:status: {}
      manager: cluster-bootstrap
      operation: Update
      time: "2023-12-06T09:17:39Z"
    name: cluster
    resourceVersion: "3863"
    uid: b09962a1-9eae-4929-bbd7-5869676e1140
  spec:
    clusterNetwork:
    - cidr: 10.128.0.0/14
      hostPrefix: 23
    externalIP:
      policy: {}
    networkType: OVNKubernetes
    serviceNetwork:
    - 172.30.0.0/16
  status:
    clusterNetwork:
    - cidr: 10.128.0.0/14
      hostPrefix: 23
    clusterNetworkMTU: 8901
    networkType: OVNKubernetes
    serviceNetwork:
    - 172.30.0.0/16
kind: NetworkList
metadata:
  continue: ""
  resourceVersion: "47574"
